ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /node-express/
        pathType: Prefix
        backend:
          service:
           name: node-express
           port:
              number: 8000     
      - path:  /python-flask/
        pathType: Prefix
        backend:
          service: 
           name: python-flask
           port:
              number: 8100
